[project]
name = "archiver-appliance-docs"
version = "0.1.0"
description = "Archiver Appliance documentation build environment"
requires-python = ">=3.11"
dependencies = [
	"myst-parser>=5.0",
	"sphinx>=8.2",
	"sphinx-copybutton>=0.5.2",
	"sphinx_rtd_theme>=3.0",
	"sphinxcontrib-openapi>=0.9.0",
	"sphinxext-opengraph>=0.13.0",
	"sphinxext-rediraffe>=0.3.0",
]

[project.optional-dependencies]
dev = ["sphinx-autobuild"]

# This is a environment only pyproject
[tool.setuptools.packages.find]
exclude = ["*"]
